--- a/python web/flask/gamestore/templates/template.html
+++ b/python web/flask/gamestore/templates/template.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='app.css') }}" rel="stylesheet">
     <title>Jogoteca</title>
 </head>
 <body>
