--- a/python web/flask/gamestore/templates/template.html
+++ b/python web/flask/gamestore/templates/template.html
@@ -23,6 +23,9 @@
       </div>
         {% block conteudo %} {% endblock %}
 
+        <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+
     </div>
 </body>
 </html>
