--- a/python web/flask/gamestore/templates/editar.html
+++ b/python web/flask/gamestore/templates/editar.html
@@ -1,21 +1,36 @@
 {% extends "template.html" %}
 {% block conteudo %}
       <form action="{{ url_for('atualizar') }}" method="post">
+
+        <figure class="img-thumbnail col-md-4">
+          <img class="img-fluid" src="{{ url_for('imagem', nome_arquivo=capa_jogo) }}">
+          <figcaption>
+            <label class="fileContainer">
+              Mudar Capa
+              <input type="file" name="arquivo" accept=".jpg">
+            </label>
+          </figcaption>
+        </figure>
+
         <fieldset>
-          <input type="hidden" name="id" value="{{ jogo.id }}">
+          <input type="hidden" name="id" value="{{ id }}">
+          {{ form.csrf_token() }}
           <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control" value="{{ jogo.nome }}">
+            {{ form.nome.label(class="form-label") }}
+            {{ form.nome(class="form-control") }}
           </div>
           <div class="form-group">
-            <label for="categoria">Categoria</label>
-            <input type="text" id="categoria" name="categoria" class="form-control" value="{{ jogo.categoria }}">
+            {{ form.categoria.label(class="form-label") }}
+            {{ form.categoria(class="form-control") }}
           </div>
           <div class="form-group">
-            <label for="console">Console</label>
-            <input type="text" id="console" name="console" class="form-control" value="{{ jogo.console }}">
+            {{ form.console.label(class="form-label") }}
+            {{ form.console(class="form-control") }}
           </div>
-          <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+          <div class="form-group">
+            {{ form.salvar(class="btn btn-primary") }}
+            <a class="btn btn-danger" href="{{ url_for('index') }}">Voltar</a>
+          </div>
         </fieldset>
       </form>
 {% endblock %}<!
