--- a/python web/flask/gamestore/templates/login.html
+++ b/python web/flask/gamestore/templates/login.html
@@ -13,7 +13,7 @@
                 {{ form.senha.label(class="form-label") }}
                 {{ form.senha(class="form-control") }}
             </div>
-            <div class="form-group">
+            <div class="form-group buttons">
                 {{ form.login(class="btn btn-primary") }}
                 <a class="btn btn-danger" href="{{ url_for('index') }}">Voltar</a>
             </div>
